# esp32-wasmi-led

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile  rust-toolchain.toml
.claude/skills/add-animation/: SKILL.md
.claude/skills/build-and-flash/: SKILL.md
.claude/skills/mqtt-control/: SKILL.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/tests/: integration.rs
common/src/: lib.rs
dummy/: Cargo.toml
frontend/: Cargo.toml  Trunk.toml  index.html  justfile
frontend/src/: app.rs  main.rs
guest/: Cargo.toml  build.rs  justfile
guest-fibonacci/src/: lib.rs
guest-fill/: Cargo.toml  justfile
guest-fill/.cargo/: config.toml
guest-fill/src/: lib.rs
guest/.cargo/: config.toml
guest/assets/: anim-0001.aseprite  anim-0002.aseprite  anim-0002.json  static-0001.aseprite
guest/src/: lib.rs
host-common/: Cargo.toml
host-common/src/: lib.rs
host-esp32c6/: Cargo.toml  diagram.json  justfile
host-esp32c6/.cargo/: config.toml
host-esp32c6/src/: direct.rs  led.rs  lib.rs  mqtt.rs  net.rs  pattern_rainbow.rs  pattern_white_block.rs  wasm.rs
host-esp32c6/wat/: justfile
mosquitto/config/: mosquitto.conf
roadmap/: STACK.md
web-common/: Cargo.toml
web-common/src/: lib.rs
