[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
web-common = { path = "../web-common" }

# Web framework
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }

# MQTT
rumqttc = { version = "0.25.1", features = ["use-rustls"] }

# Serialisation
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.149"

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full", "test-util"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
serde_json = "1.0.149"
