[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
futures = "0.3.32"
gloo-net = "0.6.0"
uuid = { version = "1.22.0", features = ["v4", "js"] }
wasm-bindgen-futures = "0.4.64"
egui = "0.33.3"
web-sys = "0.3.91"
tracing = "0.1.44"
serde_json = "1.0.149"

web-common = { path = "../web-common" }
env_logger = "0.11.9"
log = "0.4.29"
